--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -2,7 +2,7 @@ FROM nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
 
 ENV GRADIO_SERVER_NAME=0.0.0.0
 
-WORKDIR /facefusion
+WORKDIR /facefusion-custom
 
 RUN apt-get update
 RUN apt-get install python3.10 -y
