--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -12,7 +12,7 @@ RUN apt-get install git -y
 RUN apt-get install curl -y
 RUN apt-get install ffmpeg -y
 
-RUN git clone https://github.com/stephrenny/facefusion-custom.git --single-branch .
+RUN git clone https://github.com/stephrenny/facefusion-custom.git --branch master --single-branch .
 RUN python install.py --torch cuda --onnxruntime cuda --skip-venv
 
 RUN cd /usr/local/lib/python3.10/dist-packages/torch/lib && ln -s libnvrtc-672ee683.so.11.2 libnvrtc.so
